--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-firebase/app": "^10.3.0",
+    "@react-native-firebase/database": "^10.3.1",
     "react": "16.13.1",
     "react-native": "0.63.4"
   },
