--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@react-native-firebase/auth": "^10.4.0",
     "@react-native-firebase/database": "^10.3.1",
     "react": "16.13.1",
-    "react-native": "0.63.4"
+    "react-native": "0.63.4",
+    "react-native-splash-screen": "^3.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
