--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,8 +6,8 @@
     <application
             android:name=".MainApplication"
             android:label="@string/app_name"
-            android:icon="@drawable/ic_launcher"
-            android:logo="@drawable/ic_launcher"
+            android:icon="@drawable/safepass_logo"
+            android:logo="@drawable/safepass_logo"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:allowBackup="false"
             android:theme="@style/AppTheme">
