--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^10.3.0",
     "@react-native-firebase/auth": "^10.4.0",
     "@react-native-firebase/database": "^10.3.1",
+    "@react-navigation/native": "^5.8.10",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-gesture-handler": "^1.9.0",
+    "react-native-reanimated": "^1.13.2",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-screens": "^2.16.1",
     "react-native-splash-screen": "^3.2.0"
   },
   "devDependencies": {
