--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
     "react-native-splash-screen": "^3.2.0",
+    "react-native-twitter-signin": "^1.1.1",
     "react-native-vector-icons": "^7.1.0"
   },
   "devDependencies": {
