--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-firebase/database": "^10.3.1",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "crypto": "^1.0.1",
     "lodash": "^4.17.20",
     "react": "16.13.1",
     "react-native": "0.63.4",
