Fix 'crypto' not working by adding polyfills for React Native

--- a/package.json
+++ b/package.json
@@ -18,21 +18,45 @@
     "@react-native-firebase/database": "^10.3.1",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
-    "crypto": "^1.0.1",
+    "@tradle/react-native-http": "^2.0.0",
+    "assert": "^1.1.1",
+    "browserify-zlib": "^0.1.4",
+    "buffer": "^4.9.1",
+    "console-browserify": "^1.1.0",
+    "constants-browserify": "^1.0.0",
+    "dns.js": "^1.0.1",
+    "domain-browser": "^1.1.1",
+    "events": "^1.0.0",
+    "https-browserify": "0.0.1",
     "lodash": "^4.17.20",
+    "path-browserify": "0.0.0",
+    "punycode": "^1.2.4",
+    "querystring-es3": "^0.2.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-crypto": "^2.2.0",
     "react-native-elements": "^3.1.0",
     "react-native-fbsdk": "^3.0.0",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-level-fs": "^3.0.0",
     "react-native-onboarding-swiper": "^1.1.4",
+    "react-native-randombytes": "^3.6.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
     "react-native-splash-screen": "^3.2.0",
     "react-native-twitter-signin": "^1.1.1",
+    "react-native-udp": "^2.1.0",
     "react-native-vector-icons": "^7.1.0",
-    "sjcl": "^1.0.8"
+    "readable-stream": "^1.0.33",
+    "sjcl": "^1.0.8",
+    "stream-browserify": "^1.0.0",
+    "string_decoder": "^0.10.31",
+    "timers-browserify": "^1.0.1",
+    "tty-browserify": "0.0.0",
+    "url": "^0.10.3",
+    "util": "^0.10.4",
+    "vm-browserify": "0.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
@@ -46,5 +70,53 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "browser": {
+    "crypto": "react-native-crypto",
+    "zlib": "browserify-zlib",
+    "console": "console-browserify",
+    "constants": "constants-browserify",
+    "dns": "dns.js",
+    "domain": "domain-browser",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "path": "path-browserify",
+    "querystring": "querystring-es3",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "dgram": "react-native-udp",
+    "stream": "stream-browserify",
+    "timers": "timers-browserify",
+    "tty": "tty-browserify",
+    "vm": "vm-browserify",
+    "tls": false
+  },
+  "react-native": {
+    "crypto": "react-native-crypto",
+    "zlib": "browserify-zlib",
+    "console": "console-browserify",
+    "constants": "constants-browserify",
+    "dns": "dns.js",
+    "domain": "domain-browser",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "path": "path-browserify",
+    "querystring": "querystring-es3",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "dgram": "react-native-udp",
+    "stream": "stream-browserify",
+    "timers": "timers-browserify",
+    "tty": "tty-browserify",
+    "vm": "vm-browserify",
+    "tls": false
   }
 }
