Add decryption of fetched encrypted data from firebase + displaying them in a FlatList

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,6 +8,8 @@ target 'safepass_android' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'react-native-randombytes', :path => '../node_modules/react-native-randombytes'
+
   target 'safepass_androidTests' do
     inherit! :complete
     # Pods for testing
