Add new dependency:react-native-svg

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
     "react-native-splash-screen": "^3.2.0",
+    "react-native-svg": "^12.1.0",
     "react-native-twitter-signin": "^1.1.1",
     "react-native-udp": "^2.1.0",
     "react-native-vector-icons": "^7.1.0",
